[package]
name = "golden-path-app-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "golden-path-app-server"
path = "src/main.rs"

[features]
# The generated server route fns (`gen/<service>/server.rs`) are gated behind an
# `axum` feature (`#[cfg(feature = "axum")]`). Making the `axum` dependency
# optional auto-creates a matching feature; enable it by default so the binary
# builds out of the box.
default = ["axum"]
# Enabling the server's `axum` feature must also turn on the matching feature in
# the common crate, so its generated request extractors compile.
axum = ["dep:axum", "golden-path-app-common/axum"]

[dependencies]
golden-path-app-common = { path = "../common" }
axum = { workspace = true, optional = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
buffa = { workspace = true, features = ["json"] }
buffa-types = { workspace = true }
connectrpc = { workspace = true }
http-body = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }