[package]
name = "golden-path-app-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "golden-path-app-server"
path = "src/main.rs"

[features]
# The generated route fns (`gen/<service>/server.rs`) and the request extractors
# in the common crate are gated behind an `axum` feature. Making `axum` an
# optional dep auto-creates the matching feature; enabling it also turns on the
# common crate's `axum` feature so its extractors compile. On by default so the
# binary builds out of the box.
default = ["axum"]
axum = ["dep:axum", "golden-path-app-common/axum"]

[dependencies]
golden-path-app-common = { path = "../common" }
axum = { workspace = true, optional = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
buffa = { workspace = true, features = ["json"] }
buffa-types = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
connectrpc = { workspace = true }
http-body = { workspace = true }